--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       </div>
       <img class="menuBtn" src="./images/menu.png" alt="" />
       <div class="menuLinks">
-        <a class="menuLink" href="#">трансляция</a>
-        <a class="menuLink" href="#">расписание</a>
-        <a class="menuLink" href="#">спикеры</a>
+        <a class="menuLink" href="#broadcast">трансляция</a>
+        <a class="menuLink" href="#schedule">расписание</a>
+        <a class="menuLink" href="#speakers">спикеры</a>
       </div>
       <script type="text/javascript">
         let menu = document.querySelector(".menuBtn"),
@@ -52,7 +52,7 @@
             <img src="./images/play.png" alt="" />
           </div>
         </a> -->
-        <img class="broadcastCaption" src="./images/broadcast-caption.png" alt="" />
+        <img class="broadcastCaption" id="broadcast" src="./images/broadcast-caption.png" alt="" />
         <div class="broadcastBlock2">
           <div class="broadcastVideoBlock">
             <!-- PLACE BROADCAST HERE -->
@@ -71,10 +71,66 @@
           </script>
           <div class="chat">
             <div class="messages">
-
+              <div class="message">
+                <p class="messageName">
+                  Иванов С.
+                </p>
+                <p class="messageText">
+                  Являясь всего лишь частью общей картины, независимые государства, которые представляют собой яркий пример.
+                </p>
+              </div>
+              <div class="message">
+                <p class="messageName">
+                  Иванов С.
+                </p>
+                <p class="messageText">
+                  Являясь всего лишь частью общей картины, независимые государства, которые представляют собой яркий пример.
+                </p>
+              </div>
+              <div class="message messageMy">
+                <p class="messageName">
+                  Иванов С.
+                </p>
+                <p class="messageText">
+                  Являясь всего лишь частью общей картины, независимые государства, которые представляют собой яркий пример.
+                </p>
+              </div>
+              <div class="message">
+                <p class="messageName">
+                  Иванов С.
+                </p>
+                <p class="messageText">
+                  Являясь всего лишь частью общей картины, независимые государства, которые представляют собой яркий пример.
+                </p>
+              </div>
+              <div class="message">
+                <p class="messageName">
+                  Иванов С.
+                </p>
+                <p class="messageText">
+                  Являясь всего лишь частью общей картины, независимые государства, которые представляют собой яркий пример.
+                </p>
+              </div>
+              <div class="message">
+                <p class="messageName">
+                  Иванов С.
+                </p>
+                <p class="messageText">
+                  Являясь всего лишь частью общей картины, независимые государства, которые представляют собой яркий пример.
+                </p>
+              </div>
+              <div class="message">
+                <p class="messageName">
+                  Иванов С.
+                </p>
+                <p class="messageText">
+                  Являясь всего лишь частью общей картины, независимые государства, которые представляют собой яркий пример.
+                </p>
+              </div>
             </div>
             <div class="messageInput">
-              <input style="width:100px;height:100px;font-size:30px;" type="text" name="" value="">
+              <textarea class="input" name="name" rows="2" value="" placeholder="Введите сообщение"></textarea>
+              <img class="send" src="./images/send.png" alt="" />
             </div>
           </div>
           <img class="chatCaption" src="./images/chat.png" alt="">
@@ -82,7 +138,7 @@
       </div>
     </div>
 
-    <div class="schedule">
+    <div class="schedule" id="schedule">
       <img class="scheduleStyle" src="./images/schedule/schedule-style.png" alt="" />
       <div class="scheduleBlock">
         <img class="scheduleStyleLeft1" src="./images/schedule/style-1.png" alt="" />
@@ -227,7 +283,7 @@
         <img class="facesStyle" src="./images/faces/style.png" alt="" />
         <img class="facesStyle facesStyleMobile" src="./images/faces/style-mobile.png" alt="" />
       </div>
-      <div class="speakers">
+      <div class="speakers" id="speakers">
         <div class="speakersCaption">
           <img class="styleMobile styleMobileLeft" src="./images/style-left.png" alt="" />
           <img class="speakersCaptionCenter" src="./images/speakers-caption.png" alt="" />
@@ -261,45 +317,6 @@
           </div>
         </div>
         <div class="faceItem faceItem5">
-          <div class="faceItemImgBlock">
-            <img class="faceItemImg" src="./images/faces/1.png" alt="" />
-          </div>
-          <div class="">
-            <p class="faceCaption">
-              Константин<br />Константинов
-            </p>
-            <p class="faceDescription">
-              Руководитель Директорцирковской
-            </p>
-          </div>
-        </div>
-        <div class="faceItem faceItem4">
-          <div class="faceItemImgBlock">
-            <img class="faceItemImg" src="./images/faces/1.png" alt="" />
-          </div>
-          <div class="">
-            <p class="faceCaption">
-              Константин<br />Константинов
-            </p>
-            <p class="faceDescription">
-              Руководитель Директорцирковской
-            </p>
-          </div>
-        </div>
-        <div class="faceItem faceItem5">
-          <div class="faceItemImgBlock">
-            <img class="faceItemImg" src="./images/faces/1.png" alt="" />
-          </div>
-          <div class="">
-            <p class="faceCaption">
-              Константин<br />Константинов
-            </p>
-            <p class="faceDescription">
-              Руководитель Директорцирковской
-            </p>
-          </div>
-        </div>
-        <div class="faceItem faceItem4">
           <div class="faceItemImgBlock">
             <img class="faceItemImg" src="./images/faces/1.png" alt="" />
           </div>
