--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <div class="menuLinks">
         <a class="menuLink" href="#broadcast">трансляция</a>
         <a class="menuLink" href="#schedule">расписание</a>
+        <a class="menuLink" href="#leading">ведущие</a>
         <a class="menuLink" href="#speakers">спикеры</a>
       </div>
       <script type="text/javascript">
@@ -155,84 +156,72 @@
           <div class="item itemFirst">
             <div class="itemLeft">
               <p>
-                18:00-19:00
+                9:30-10:00
               </p>
             </div>
             <div class="itemRight">
               <p>
-                Мероприятие #1 Название (Спикер-ФИО)Мероприятие #1 Название (Спикер-ФИО)Мероприятие #1 Название (Спикер-ФИО)
+                Регистрация и welcome
               </p>
             </div>
           </div>
           <div class="item">
             <div class="itemLeft">
               <p>
-                18:00-19:00
+                10:00
               </p>
             </div>
             <div class="itemRight">
               <p>
-                Мероприятие #1 Название (Спикер-ФИО)Мероприятие #1 Название (Спикер-ФИО)Мероприятие #1 Название (Спикер-ФИО)
+                Начало мероприятия. Поздравление от руководства.
               </p>
             </div>
           </div>
           <div class="item">
             <div class="itemLeft">
               <p>
-                18:00-19:00
+                10:20-10:40
               </p>
             </div>
             <div class="itemRight">
               <p>
-                Мероприятие #1 Название (Спикер-ФИО)Мероприятие #1 Название (Спикер-ФИО)Мероприятие #1 Название (Спикер-ФИО)
+                Александр Маслюк и специальные гости в рубрике «Тренды HR»
               </p>
             </div>
           </div>
           <div class="item">
             <div class="itemLeft">
               <p>
-                18:00-19:00
+                10:55-11:15
               </p>
             </div>
             <div class="itemRight">
               <p>
-                Мероприятие #1 Название (Спикер-ФИО)Мероприятие #1 Название (Спикер-ФИО)Мероприятие #1 Название (Спикер-ФИО)
+                Анастасия Четверикова в рубрике «Куда Go»
               </p>
             </div>
           </div>
           <div class="item">
             <div class="itemLeft">
               <p>
-                18:00-19:00
+                11:25-11:50
               </p>
             </div>
             <div class="itemRight">
               <p>
-                Мероприятие #1 Название (Спикер-ФИО)Мероприятие #1 Название (Спикер-ФИО)Мероприятие #1 Название (Спикер-ФИО)
+                Андрей Бедняков в рубрике «КругоСберка»
               </p>
             </div>
           </div>
           <div class="item">
             <div class="itemLeft">
               <p>
-                18:00-19:00
+                12:00
               </p>
             </div>
             <div class="itemRight">
               <p>
-                Мероприятие #1 Название (Спикер-ФИО)Мероприятие #1 Название (Спикер-ФИО)Мероприятие #1 Название (Спикер-ФИО)
-              </p>
-            </div>
-          </div>
-          <div class="item itemLast">
-            <div class="itemLeft">
-              <p>
-                18:00-19:00
-              </p>
-            </div>
-            <div class="itemRight">
-              <p>
-                Мероприятие #1 Название (Спикер-ФИО)Мероприятие #1 Название (Спикер-ФИО)Мероприятие #1 Название (Спикер-ФИО)
+                Конец мероприятия
               </p>
             </div>
           </div>
@@ -245,7 +234,7 @@
     <div class="faces">
       <div class="leading">
         <img class="leadingPeopleStyleRightTop" src="./images/faces/people-style-right-top.png" alt="" />
-        <div class="leadingCaption">
+        <div class="leadingCaption" id="leading">
           <img class="leadingCaptionLeft" src="./images/leading-style-left.png" alt="" />
           <img class="styleMobile styleMobileLeft" src="./images/style-left.png" alt="" />
           <img class="leadingCaptionCenter" src="./images/leading-caption.png" alt="" />
@@ -254,27 +243,27 @@
         </div>
         <div class="faceItem faceItem1">
           <div class="faceItemImgBlock">
-            <img class="faceItemImg" src="./images/faces/1.png" alt="" />
+            <img class="faceItemImg" src="./images/faces/5.png" alt="" />
           </div>
           <div class="">
             <p class="faceCaption">
-              Константин<br />Константинов
+              Тимур<br />Ромашко
             </p>
             <p class="faceDescription">
-              Руководитель Директорцирковской
+              Ведущий утреннего шоу на Comedy Radio
             </p>
           </div>
         </div>
         <div class="faceItem faceItem2">
           <div class="faceItemImgBlock">
-            <img class="faceItemImg" src="./images/faces/1.png" alt="" />
+            <img class="faceItemImg" src="./images/faces/4.png" alt="" />
           </div>
           <div class="">
             <p class="faceCaption">
-              Константин<br />Константинов
+              Тамби<br />Масаев
             </p>
             <p class="faceDescription">
-              Руководитель Директорцирковской
+              Стендап комик, резидент комедийного шоу «Что было дальше»
             </p>
           </div>
         </div>
@@ -296,36 +285,36 @@
           </div>
           <div class="">
             <p class="faceCaption">
-              Константин<br />Константинов
+              Андрей<br />Бедняков
             </p>
             <p class="faceDescription">
-              Руководитель Директорцирковской
+              Ведущий программы о путешествиях «Орёл и решка»
             </p>
           </div>
         </div>
         <div class="faceItem faceItem4">
           <div class="faceItemImgBlock">
-            <img class="faceItemImg" src="./images/faces/1.png" alt="" />
+            <img class="faceItemImg" src="./images/faces/2.png" alt="" />
           </div>
           <div class="">
             <p class="faceCaption">
-              Константин<br />Константинов
+              Анастасия<br />Четверикова
             </p>
             <p class="faceDescription">
-              Руководитель Директорцирковской
+              Журналист, музыковед, культуролог
             </p>
           </div>
         </div>
         <div class="faceItem faceItem5">
           <div class="faceItemImgBlock">
-            <img class="faceItemImg" src="./images/faces/1.png" alt="" />
+            <img class="faceItemImg" src="./images/faces/3.png" alt="" />
           </div>
           <div class="">
             <p class="faceCaption">
-              Константин<br />Константинов
+              Александр<br />Маслюк
             </p>
             <p class="faceDescription">
-              Руководитель Директорцирковской
+              эксперт по HR трансформации SAP, автор телеграмм канала WTF_HR
             </p>
           </div>
         </div>
