Updating index.html

--- a/index.html
+++ b/index.html
@@ -53,8 +53,18 @@
   </script>
 </head>
 
-<body>
-
+<body class="popUpINDEXNoScroll">
+  <div class="popUpINDEX">
+    <div class="popUpINDEXInside">
+      <div class="popUpINDEXData">
+        <p>
+          Упс... Так хорошо сидели, общались...
+          <br />Давайте продолжим ?
+          <br />Переходите по <a href="#">ссылке</a>
+        </p>
+      </div>
+    </div>
+  </div>
   <div class="body">
     <div class="menu">
       <div class="logo">
