Updating index.html

--- a/index-pop-up.html
+++ b/index-pop-up.html
@@ -23,7 +23,7 @@
         <p>
           Упс... Так хорошо сидели, общались...
           <br />Давайте продолжим ?
-          <br />Переходите по <a href="#">ссылке</a>
+          <br />Переходите по <a href="https://facecast.net/v/penqnd">ссылке</a>
         </p>
       </div>
     </div>
