--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     });
   </script>
 </head>
-
-<body class="popUpINDEXNoScroll">
-  <div class="popUpINDEX">
+<body>
+<!-- <body class="popUpINDEXNoScroll"> -->
+  <!-- <div class="popUpINDEX">
     <div class="popUpINDEXInside">
       <div class="popUpINDEXData">
         <p>
@@ -64,7 +64,7 @@
         </p>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="body">
     <div class="menu">
       <div class="logo">
